# taura_Rosi_challenge

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: amcl_omni.launch  dual_ekf_navsat_example.launch  mapping.launch  move_base.launch  rosi.launch  urdf.launch
params/: costmap_common_params.yaml  dual_ekf_navsat_example.yaml  global_costmap_params.yaml
scripts/: navigation.py  odom_euler.py  test.py  testMovement.py  test_kinect_depth.py  test_kinect_rgb.py  test_velodyne.py
taura/: CMakeLists.txt  package.xml
taura/launch/: mapping.launch  mapping_test.launch  move_base.launch  robot_pose.launch  rosi.launch
taura/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dual_ekf_navsat_example.yaml  local_costmap_params.yaml
taura/scripts/: arm_functions.py  arm_move.py  detect_flame.py  navi.py  navigation.py  test.py  test_kinect_depth.py  twist_to_rosi_movement.py  vai.py
